# cusignal

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build.sh  cusignal_conda_base_env.yml  cusignal_conda_env.yml  dependencies.yaml  kalman_test_script.py  print_env.sh  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  ops-bot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  submit-question.md
.github/workflows/: build.yaml  new-issues-to-triage-projects.yml  pr.yaml  test.yaml
ci/: build_docs.sh  build_python.sh  test_notebooks.sh  test_python.sh
ci/benchmark/: build.sh
ci/checks/: changelog.sh  style.sh
ci/cpu/: build.sh  upload-anaconda.sh  upload-pypi.sh  upload.sh
ci/docs/: build.sh
ci/gpu/: build.sh  test-notebooks.sh
ci/local/: README.md  build.sh
ci/release/: update-version.sh
ci/utils/: nbtest.sh
conda/environments/: all_cuda-115_arch-x86_64.yaml  all_cuda-118_arch-x86_64.yaml  cusignal_airt.yml  cusignal_base.yml  cusignal_full.yml  cusignal_jetson_base.yml
conda/recipes/cusignal/: build.sh  conda_build_config.yaml  meta.yaml
cpp/: CMakeLists.txt
cpp/cubin/spectral_analysis/: _spectral.35.cubin  _spectral.50.cubin  _spectral.52.cubin  _spectral.53.cubin  _spectral.60.cubin  _spectral.61.cubin  _spectral.62.cubin  _spectral.70.cubin  _spectral.72.cubin  _spectral.75.cubin  _spectral.75.ptx
cpp/fatbin/convolution/: _convolution.fatbin
cpp/fatbin/filtering/: _sosfilt.fatbin  _upfirdn.fatbin
cpp/fatbin/io/: _reader.fatbin  _writer.fatbin
cpp/fatbin/spectral_analysis/: _spectral.fatbin
cpp/scripts/: run-clang-format.py
cpp/src/convolution/: _convolution.cu
cpp/src/filtering/: _channelizer.cu  _sosfilt.cu  _upfirdn.cu
cpp/src/io/: _reader.cu  _writer.cu  io.cu
cpp/src/io/reader/: Makefile  reader.cu  reader.cuh
cpp/src/peak_finding/: _peak_finding.cu
cpp/src/spectral_analysis/: _spectral.cu
cusignal/: __init__.py  _arraytools.py  _peak_finding.py  _signaltools.py  _spectral.py  _upfirdn.py  acoustics.py  bsplines.py  fftpack_helper.py  fir_filter_design.py  signaltools.py  spectral.py  waveforms.py  wavelets.py  windows.py
cusignal/cupy_helper/: __init__.py  linalg_extended.py  polynomial.py
cusignal/test/: test_signaltools.py  test_spectral.py  test_waveforms.py  test_wavelets.py  test_windows.py  utils.py
docker/: Dockerfile
docs/: Makefile  make.bat  requirement.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/_static/: params.css
notebooks/: E2E_Example.ipynb  bspline_examples.ipynb  peak_finding_examples.ipynb  sdr_integration.ipynb  signaltools_examples.ipynb  spectral_examples.ipynb  waveform_examples.ipynb  wavelets_examples.ipynb  windows_examples.ipynb
notebooks/api_guide/: acoustics_examples.ipynb  bspline_examples.ipynb  convolution_examples.ipynb  estimation_examples.ipynb  filter_design_examples.ipynb  filtering_examples.ipynb  io_examples.ipynb  peak_finding_examples.ipynb  radar_examples.ipynb  signaltools_examples.ipynb  spectral_examples.ipynb  waveform_examples.ipynb  wavelets_examples.ipynb  windows_examples.ipynb
notebooks/sdr/: online_signal_processing_tools.ipynb  rtlsdr_offline_demod_to_transcript.ipynb  sdr_wfm_demod.ipynb
notebooks/visualization/: scope.ipynb
python/: .coveragerc  MANIFEST.in  pytest.ini  setup.cfg  setup.py  versioneer.py
python/cusignal/: __init__.py  _arraytools.py  _compile_kernels.py  _filters.py  _lfilter.py  _lfilter_kernels.py  _peak_finding.py  _precompile.py  _signaltools.py  _spectral.py  _spectral_kernels.py  _upfirdn.py  _version.py  acoustics.py  bsplines.py  conftest.py  fftpack_helper.py  filter_design.py  fir_filter_design.py  lfilter.py  signaltools.py  spectral.py  waveforms.py  wavelets.py  windows.py
python/cusignal/acoustics/: __init__.py  cepstrum.py
python/cusignal/benchmark/: bench_acoustics.py  bench_bsplines.py  bench_convolution.py  bench_filter_design.py  bench_filtering.py  bench_peak_finding.py  bench_signaltools.py  bench_spectral.py  bench_spectral_analysis.py  bench_waveforms.py  bench_wavelets.py  bench_windows.py  conftest.py
python/cusignal/bsplines/: __init__.py  bsplines.py
python/cusignal/convolution/: __init__.py  _convolution.fatbin  _convolution_cuda.py  _convolve_kernels.py  _correlate_kernels.py  _signaltools_kernels.py  convolution_utils.py  convolve.py  correlate.py
python/cusignal/cupy_helper/: __init__.py  linalg_extended.py  polynomial.py
python/cusignal/demod/: __init__.py  demod.py
python/cusignal/diff/: __init__.py  polyphase.py  resample.py
python/cusignal/estimation/: __init__.py  _filters.py  _filters_cuda.py  filters.py
python/cusignal/filter_design/: __init__.py  filter_design_utils.py  fir_filter_design.py
python/cusignal/filtering/: __init__.py  _channelizer.fatbin  _channelizer_cuda.py  _lfilter_cuda.py  _lfilter_kernels.py  _sosfilt.fatbin  _sosfilt_cuda.py  _upfirdn.fatbin  _upfirdn_cuda.py  _upfirdn_kernels.py  filter.py  filtering.py  resample.py
python/cusignal/io/: __init__.py  _reader.fatbin  _reader_cuda.py  _writer.fatbin  _writer_cuda.py  reader.py  writer.py
python/cusignal/peak_finding/: __init__.py  _peak_finding_cuda.py  peak_finding.py  peak_finding_cuda.py
python/cusignal/pytorch/: polyphase.py
python/cusignal/radartools/: __init__.py  beamformers.py  radartools.py
python/cusignal/reader/: __init__.py  _reader_cuda.py  reader.py
python/cusignal/spectral_analysis/: __init__.py  _spectral.fatbin  _spectral.ptx  _spectral_cuda.py  _spectral_kernels.py  spectral.py
python/cusignal/test/: conftest.py  test_acoustics.py  test_arraytools.py  test_bsplines.py  test_convolution.py  test_diff.py  test_filter_design.py  test_filtering.py  test_filters.py  test_peak_finding.py  test_pytorch_polyphase.py  test_radartools.py  test_signaltools.py  test_spectral.py  test_spectral_analysis.py  test_waveforms.py  test_wavelets.py  test_windows.py  utils.py
python/cusignal/testing/: utils.py
scripts/: kalman_test_script.py
(+20 files in other folders)
